--- a/main.css
+++ b/main.css
@@ -63,7 +63,7 @@ a {
     margin-bottom: -0.2em;
     margin-top: -0.3em;
     font-size: 6em;
-    color: #FFF1C2;
+    color: #8ACABE;
     font-family: "Open sans", sans-serif;
     font-weight: 700;
     text-shadow: 0 4px #E28B6C;
