--- a/main.css
+++ b/main.css
@@ -1,3 +1,8 @@
+html, html a {
+    -webkit-font-smoothing: antialiased;
+    text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
+}
+
 html * {
     margin: 0;
 }
