Centering post in the layout

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -17,6 +17,7 @@
         color: $text-color;
         background-color: $background-color !important;
         -webkit-text-size-adjust: 100%;
+        text-align: center;
     }
 
 /* Set Margin Bottom for Vertical Rhythm
