--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -107,7 +107,7 @@
         font-size: 15px;
         border: 3px solid rgba(243, 116, 116, 0.05);
         font-family: Menlo, Monaco, "Andale Mono", serif;
-        background-color: #FDFAFA;
+        background-color: rgba(243, 116, 116, 0.05);
     }
 
     code {
@@ -121,8 +121,9 @@
         border-radius: 3px;
         padding: 8px 12px;
         overflow-x: scroll;
-        /*background-color: #F5F5F5;*/
-        color: #777;
+        
+        color: #666;
+
 
         > code {
             /*background-color: #F5F5F5;*/
