Changed site-header background color

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,7 +2,7 @@
  * ============================================== */
     .site-header {
         height: 55px;
-        /* background-color: #F5F5F5; */
+        background-color: rgba(243, 116, 116, 0.1);
         position: relative;
         width: 100%;
         border-top: 6px solid rgba(239, 41, 41, 0.64);
