- Change config.yml

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <div class="footer" align="center">
 
-  Copyright &copy; <a href=http://baksoy.github.io target="_blank">Bera Aksoy</a> 2015<BR />
+  Copyright &copy; <a href={{site.website}} target="_blank"> {{site.owner}} </a> {{ page.date | date: "%Y" }} <BR /> 
 
 </div>
